convert jar to gradle compile

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:22.2.0'
     //compile files('libs/nineoldandroids.jar')
-    compile files('libs/picasso-2.5.2.jar')
 
+    compile 'com.squareup.picasso:picasso:2.3.2'
 
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
