--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,10 @@ dependencies {
 
     //dependency injection for models
     compile 'com.squareup.dagger:dagger:1.0.1'
-    //compile 'com.squareup.dagger:dagger-compiler:1.0.1'
+
 
     //dependency injection for views
-//    compile 'com.jakewharton:butterknife:1.3.2' // does not support onclick
+
     compile 'com.jakewharton:butterknife:6.1.0'
 
 
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
 }
