--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.2.0'
-    compile "com.android.support:appcompat-v7:21.0.3"
+    //compile 'com.android.support:support-v4:22.2.0'
+    compile "com.android.support:support-v4:+"
+    compile "com.android.support:appcompat-v7:22.2.0"
 
     //dependency injection for models
     compile 'com.squareup.dagger:dagger:1.0.1'
@@ -37,4 +38,108 @@ dependencies {
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.daimajia.slider:library:1.1.5@aar'
+
+    compile 'com.github.rey5137:material:1.1.0'
+
+    /*compile "com.android.support:appcompat-v7:21.0.3"
+//    compile 'com.android.support:appcompat-v7:22.1.1'
+
+    //dependency injection for models
+    compile 'com.squareup.dagger:dagger:1.0.1'
+    compile 'com.squareup.dagger:dagger-compiler:1.0.1'
+
+    //dependency injection for views
+//    compile 'com.jakewharton:butterknife:1.3.2' // does not support onclick
+    compile 'com.jakewharton:butterknife:6.1.0'
+    //compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+//    compile 'com.github.kevinsawicki:android-pusher:0.6'
+//    compile 'com.github.kevinsawicki:wishlist:0.9'
+    //bus library recommended by google
+    compile 'com.squareup:otto:1.3.4'
+//    compile 'com.squareup.picasso:picasso:1.1.1'
+
+    //retrofit
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.retrofit:retrofit:1.5.1'
+
+    //an endless adapter, similar to playstore
+    //compile 'com.commonsware.cwac:endless:1.2.3'
+
+    //flatui
+    //compile 'com.github.eluleci:flatui:3.0.0'
+
+    //slider
+//    compile "com.android.support:support-v4:+"
+    compile 'com.squareup.picasso:picasso:2.3.2'
+//    compile 'com.nineoldandroids:library:2.4.0'
+    //compile 'com.daimajia.slider:library:1.1.2@aar'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+
+    //floating action button
+    //compile 'com.shamanland:fab:0.0.6'
+
+    //yoyo animation (improvement for nineoldandroid)
+//    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+
+    //http library for easy downloading files (used by instagram according to author)
+    //compile 'com.loopj.android:android-async-http:1.4.5'
+
+    //okhttp to fix some issues in retrofit
+    compile 'com.squareup.okhttp:okhttp:1.6.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
+
+    //youtube sdk
+    //compile 'com.google.apis:google-api-services-youtube:v3-rev120-1.19.0'
+
+    //facebook
+    //compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+
+
+    //cardview
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+
+    //swipe layout
+    //compile 'com.android.support:recyclerview-v7:21.0.0'
+    ///compile 'com.android.support:support-v4:20.+'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+
+    //material design that works on lower en devices
+//    compile 'com.android.support:appcompat-v7:21.0.2'
+//    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.github.rey5137:material:1.1.0'
+
+
+    //parallax - for semi scrollable image
+    compile 'com.github.nirhart:parallaxscroll:1.0'
+
+    //paypal
+    //compile fileTree(dir: libsSrcDir, include: '*.jar')
+    //compile files("${buildDir}/native-libs/native-libs.jar")
+
+    //GreenDAO - an orm library for android
+    compile 'de.greenrobot:greendao:1.3.7'
+
+    //sweet dialog
+    compile 'cn.pedant.sweetalert:library:1.3'
+
+
+    //compile project(':lib')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //here's a sample on how to add a folder project library
+    //this will load library folder relative to the path of this gradle file
+    //compile project(':library')
+
+
+    androidTestCompile 'junit:junit:4.11'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'*/
+
+    //androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+    //androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+    //androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.0'
 }
