--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile "com.android.support:support-v4:+"
     compile "com.android.support:appcompat-v7:22.2.0"
 
+    //retrofit
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+
     //dependency injection for models
     compile 'com.squareup.dagger:dagger:1.0.1'
 
@@ -40,6 +43,18 @@ dependencies {
     compile 'com.daimajia.slider:library:1.1.5@aar'
 
     compile 'com.github.rey5137:material:1.1.0'
+
+
+    compile 'com.squareup:otto:1.3.4'
+//    compile 'com.squareup.picasso:picasso:1.1.1'
+
+    //retrofit
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.retrofit:retrofit:1.5.1'
+
+    //okhttp to fix some issues in retrofit
+    compile 'com.squareup.okhttp:okhttp:1.6.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
 
     /*compile "com.android.support:appcompat-v7:21.0.3"
 //    compile 'com.android.support:appcompat-v7:22.1.1'
