--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,9 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.5.1'
 
     //okhttp to fix some issues in retrofit
-    compile 'com.squareup.okhttp:okhttp:1.6.0'
+    //compile 'com.squareup.okhttp:okhttp:1.6.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
 
     /*compile "com.android.support:appcompat-v7:21.0.3"
 //    compile 'com.android.support:appcompat-v7:22.1.1'
